--- a/notepad-assignment.html
+++ b/notepad-assignment.html
@@ -1,5 +1,10 @@
 <DOCTYPE html>
 <html lang="en">
-	<title>This is my title!</title>
-	<p>Hello, world!</p>
+	<head>
+		<title>This is my title!</title>
+		<meta charset="utf-8">
+	</head>
+	<body>
+		<p>Hello, world!</p>
+	</body>
 </html>
