--- a/HTML documents/Assignment.html
+++ b/HTML documents/Assignment.html
@@ -14,8 +14,11 @@
 		<main>
 			<h1>My Tech Academy Assignment</h1>
 			<p>This is my assignment!</p>
+			<blockquote cite="https://traversemountainpetcare.com/fun-facts-and-information/fun-cat-facts-for-kids/#:~:text=Cats%20conserve%20energy%20by%20sleeping,young%20cats%20are%20called%20kittens.">
+			Cats conserve energy by sleeping for an average of 13 to14 hours a day.
+			</blockquote>
 			<a href="dog.html">Here lies an image of a puppy!</a>
-			<a href="https://imgc.artprintimages.com/img/print/domestic-cat-one-year-dark-tortoiseshell-shorthair-cat_u-l-q10o1280.jpg?p=0">This is a picture of a cat!</a>
+			<a href="https://imgc.artprintimages.com/img/print/domestic-cat-one-year-dark-tortoiseshell-shorthair-cat_u-l-q10o1280.jpg?p=0">And this is a picture of a cat!</a>
 		</main>
 		<iframe width="420" height="315" src="https://www.youtube.com/embed/oBloyiprdEM">
 		</iframe>
