--- a/Basic_HTML_and_JavaScript_1/Basic_HTML_2.html
+++ b/Basic_HTML_and_JavaScript_1/Basic_HTML_2.html
@@ -5,13 +5,7 @@
 		Click Here
 	</button>
 	<p id="click"></p>
-<script>
-	function myFunction(){
-		var String = "I have been clicked!";
-		var result = String.fontcolor("red");
-		document.getElementById("click").innerHTML =
-		result;
-	}
+<script src="Basic_JavaScript_1.js">
 </script>
 </body>
 </html>
