--- a/Basic_HTML_and_JavaScript_1/Basic_HTML_1.html
+++ b/Basic_HTML_and_JavaScript_1/Basic_HTML_1.html
@@ -10,8 +10,12 @@
 		<p id="click"></p>
 		<p><font color="blue" face="Arial" size="5"><b>This text is blue and bold!</b></font></p>
 		<p><font color="#228B22" face="Calibri" size="3"><i><u>This text is green, italic, and underlined!</i></u></font></p>
-		<script src="Basic_JavaScript_1.js"></script>
 		<img src="index.jpg" alt="Image of Reyn from Xenoblade Chronicles">
 		<p><font color="red">Right </font><font color="orange">click </font><font color="#CCCC00">the </font><font color="green">image </font><font color="blue">and </font><font color="indigo">click </font><font color="violet">'view image info' </font><font color="pink">to </font><font color="red">see </font><font color="orange">the </font><font color="#CCCC00">alt </font><font color="green">text!</font></p>
+		<div style="color:blue">
+			<h1>This is my blue divider heading!</h1>
+			<p>This is blue thanks to the style tag!</p>
+		</div>
+		<script src="Basic_JavaScript_1.js"></script>
 	</body>
 </html>
