One Page Website HTML and CSS
edit HTML for one page website. Added CSS for one page website. edited images and image descriptions

--- a/Basic_HTML_and_CSS/One-Page Website/one_page_website.html
+++ b/Basic_HTML_and_CSS/One-Page Website/one_page_website.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Unova Region</title>
+        <link rel="stylesheet" href="./css/one-page-website.css">
+        <title>Nevermore</title>
         <meta charset="ufc-8">
     </head>
     <body>
 
         <!-- nav -->
-        <div>
-            <div>
-                <nav>
+        <div class="wrap">
+            <div class="menu-container"">
+                <nav class="nav">
                     <a href="#home">HOME</a> &nbsp;|&nbsp;
                     <a href="#gallery">GALLERY</a> &nbsp;|&nbsp;
-                    <a href="#video">MUSIC</a> &nbsp;|&nbsp;
+                    <a href="#video">VIDEOS</a> &nbsp;|&nbsp;
                     <a href="#contact">CONTACT US</a>
                 </nav>
             </div>
@@ -20,123 +21,123 @@
 
         <!-- home -->
         <div id="home">
-            <div>
-                <div>
-                    <span>Welcome to the Unova Region!</span>
+            <div class="container">
+                <div class="text-center">
+                    <span>Nevermore: Raven Club Hub</span>
                 </div>
             </div>
         </div>
         <!-- end home -->
 
         <!-- gallery -->
-        <section>
-            <div id="gallery">
+        <section id="gallery">
+            <div class="container">
                     <h1>Gallery</h1>
-                    <div>
+                    <div class="flex-container">
 
                         <!-- photo-container 1-->
-                        <div>
-                            <div>
-                                <img src="./images/thumb/thumb_1.png" alt="Nuvema Town">
-                                <div>
+                        <div class="photo-container">
+                            <div class="photo">
+                                <img src="./images/thumb/thumb_1.png" alt="">
+                                <div class="photo-overlay">
                                     <h3>Click to Enlarge</h3>
-                                    <p>Many trainers begin their journey in small towns like Nuvema!</p>
+                                    <p>Ravens have beautiful black feathers.</p>
                                 </div>
                             </div>
                         </div>
                         <!-- end photo container 1 -->
 
                          <!-- photo-container 2 -->
-                         <div>
-                            <div>
-                                <img src="./images/thumb/thumb_2.png" width="256" height="192" alt="Water Type Gym">
-                                <div>
+                         <div class="photo-container">
+                            <div class="photo">
+                                <img src="./images/thumb/thumb_2.png" alt="">
+                                <div class="photo-overlay">
                                     <h3>Click to Enlarge</h3>
-                                    <p>Our gyms are vibrant, colorful, and challenging!</p>
+                                    <p>Ravens have large wings and a wedge-shaped tail, which helps you tell them apart from crows!</p>
                                 </div>
                             </div>
                         </div>
                         <!-- end photo container 2 -->
 
                          <!-- photo-container 3 -->
-                         <div>
-                            <div>
-                                <img src="./images/thumb/thumb_3.png" width="256" height="192" alt="Overlook of natural scenery">
-                                <div>
+                         <div class="photo-container">
+                            <div class="photo">
+                                <img src="./images/thumb/thumb_3.png" alt="">
+                                <div class="photo-overlay">
                                     <h3>Click to Enlarge</h3>
-                                    <p>Amazing scenery awaits!</p>
+                                    <p>Ravens perch in order to look for prey.</p>
                                 </div>
                             </div>
                         </div>
                         <!-- end photo container 3 -->
 
                          <!-- photo-container 4 -->
-                         <div>
-                            <div>
-                                <img src="./images/thumb/thumb_4.png" alt="Legendary Sword Trio and Keldeo">
-                                <div>
+                         <div class="photo-container">
+                            <div class="photo">
+                                <img src="./images/thumb/thumb_4.png" alt="">
+                                <div class="photo-overlay">
                                     <h3>Click to Enlarge</h3>
-                                    <p>Ancient legends and mysterious Pok&eacute;mon lie waiting for special trainers...</p>
+                                    <p>Ravens live in groups.</p>
                                 </div>
                             </div>
                         </div>
                         <!-- end photo container 4 -->
 
                          <!-- photo-container 5 -->
-                         <div>
-                            <div>
-                                <img src="./images/thumb/thumb_5.png" alt="Pok&eacute; Transfer Lab">
-                                <div>
+                         <div class="photo-container">
+                            <div class="photo">
+                                <img src="./images/thumb/thumb_5.png" alt="">
+                                <div class="photo-overlay">
                                     <h3>Click to Enlarge</h3>
-                                    <p>Unova mixes the cutting edge tech of the future with the natural scenery of this old region.</p>
+                                    <p>Ravens tend to live near humans.</p>
                                 </div>
                             </div>
                         </div>
                         <!-- end photo container 5 -->
 
                          <!-- photo-container 6 -->
-                         <div>
-                            <div>
-                                <img src="./images/thumb/thumb_6.png" alt="Wild Battle">
-                                <div>
+                         <div class="photo-container">
+                            <div class="photo">
+                                <img src="./images/thumb/thumb_6.png" alt="">
+                                <div class="photo-overlay">
                                     <h3>Click to Enlarge</h3>
-                                    <p>Powerful wild Pok&eacute;mon are ready to fight!</p>
+                                    <p>Ravens calls are used to communicate a variety of complex information to fellow ravens.</p>
                                 </div>
                             </div>
                         </div>
                         <!-- end photo container 6 -->
 
                          <!-- photo-container 7 -->
-                         <div>
-                            <div>
-                                <img src="./images/thumb/thumb_7.png" alt="Unova Ferris Wheel">
-                                <div>
+                         <div class="photo-container">
+                            <div class="photo">
+                                <img src="./images/thumb/thumb_7.png" alt="">
+                                <div class="photo-overlay">
                                     <h3>Click to Enlarge</h3>
-                                    <p>Enjoy beautiful views from the top of the Unova Ferris Wheel!</p>
+                                    <p>Ravens are highly social.</p>
                                 </div>
                             </div>
                         </div>
                         <!-- end photo container 7 -->
 
                         <!-- photo-container 8 -->
-                        <div>
-                            <div>
-                                <img src="./images/thumb/thumb_8.png" alt="Outside of Musical building">
-                                <div>
+                        <div class="photo-container">
+                            <div class="photo">
+                                <img src="./images/thumb/thumb_8.png" alt="">
+                                <div class="photo-overlay">
                                     <h3>Click to Enlarge</h3>
-                                    <p>Enter your Pok&eacute;mon into Pok&eacute;mon musicals!</p>
+                                    <p>Ravens are intelligent, majestic, and mischevious!</p>
                                 </div>
                             </div>
                         </div>
                         <!-- end photo container 8 -->
 
                         <!-- photo-container 9 -->
-                        <div>
-                            <div>
-                                <img src="./images/thumb/thumb_9.png" alt="Elite Four member Shauntelle's room">
-                                <div>
+                        <div class="photo-container">
+                            <div class="photo">
+                                <img src="./images/thumb/thumb_9.png" alt="">
+                                <div class="photo-overlay">
                                     <h3>Click to Enlarge</h3>
-                                    <p>Dare to challenge the Elite Four and become the region's next Champion!</p>
+                                    <p>Ravens make their nests out of sticks, usually in places like cliffs that have overhangs.</p>
                                 </div>
                             </div>
                         </div>
@@ -148,38 +149,38 @@
         <!-- end gallery -->
 
         <!-- video -->
-        <section>
-            <div id="video">
-                <div>
-                    <h2>Enjoy the beautiful sounds of the Unova region!</h2>
-                    <iframe width="420" height="315" src="https://www.youtube.com/embed/BTl9EQPs-Yw?autoplay=1&mute=1"></iframe>
+        <section id="video">
+            <div class="container">
+                <div class="video-container">
+                    <h2>Enjoy this video of a raven speaking Japanese!</h2>
+                    <iframe width="420" height="315" src="https://www.youtube.com/embed/yFXU7o0fYII?autoplay=1&mute=1"></iframe>
                 </div>
             </div>
         </section>
         <!-- video -->
 
         <!-- RSVP -->
-        <section>
-            <div id="contact">
-                <div>
-                   <h1>Reservations</h1>
-                   <div>
-                       <h2><span>Ancient legends await you here!</span>
-                        <br />Reserve a flight to Unova today!
+        <section id="contact">
+            <div class="container">
+                <div class="heading-padding">
+                    <h1 class="heading-padding">Member Sign-Up</h1>
+                    <div class="signup">
+                       <h2><span>Learn all about ravens and more!</span>
+                        <br/>Join the club today!
                         </h2>
-                        <p>
+                        <p class="signup-text">
                             Please provide your contact information.
                         </p>
-                        <div>
+                        <div class="form-signup">
                             <form action="" method="post">
-                                <input class="rsvp" type="text" value="First Name">
-                                <input class="rsvp" type="text" value="Last Name">
-                                <input class="rsvp" type="text" value="Email Address">
-                                <input class="rsvp" type="text" value="Phone Number">
+                                <input class="rsvp" type="text" value="" placeholder="First Name">
+                                <input class="rsvp" type="text" value="" placeholder="Last Name">
+                                <input class="rsvp" type="text" value="" placeholder="Email Address">
+                                <input class="rsvp" type="text" value="" placeholder="Phone Number">
                                 <div class="form-spacer">
                                     <label class="terms">Terms and Conditions</label>
                                 </div>
-                                <div>
+                                <div class="submit">
                                     <input type="submit" value="Submit">
                                 </div>
                             </form>
@@ -196,7 +197,7 @@
                 <div>
                     <footer>
                         <p>Creator: Adam Kelley &nbsp;|&nbsp; <a href="./images/thumb/cat.png">EMAIL</a> &nbsp;|&nbsp; 
-                        www.unovaregion.pkmn &nbsp;|&nbsp; &copy; 2021</p>
+                        www.raven-nevermore.rvn &nbsp;|&nbsp; &copy; 2021</p>
                     </footer>
                 </div>
             </div>
