--- a/Basic_HTML_and_CSS/One-Page Website/one_page_website.html
+++ b/Basic_HTML_and_CSS/One-Page Website/one_page_website.html
@@ -152,7 +152,7 @@
         <section id="video">
             <div class="container">
                 <div class="video-container">
-                    <h2>Enjoy this video of a raven speaking Japanese!</h2>
+                    <h2>Enjoy this video of a raven speaking!</h2>
                     <iframe width="420" height="315" src="https://www.youtube.com/embed/yFXU7o0fYII?autoplay=1&mute=1"></iframe>
                 </div>
             </div>
